# llama-constrain

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_all_tests.sh
examples/: auto_cache_example.cpp  cache_size_test.cpp  context_memory_example.cpp  context_save_load_example.cpp  context_speed_test.cpp  example.cpp  generate_example.cpp  memory_agent_example.cpp  min_max_tokens_example.cpp  multitoken_test.cpp  pattern_example.cpp  select_example.cpp  simple_example.cpp  stop_sequence_test.cpp  stopping_example.cpp  test_prefix_issue.cpp  thinking_chat_example.cpp  token_debug_test.cpp  variables_example.cpp  xml_stop_example.cpp
include/: constrained_generation.h  constrained_llm.h  token_filter_sampler.h
src/: constrained_generation.cpp  constrained_llm.cpp  token_filter_sampler.cpp
